--- a/HTML/Facebook.html
+++ b/HTML/Facebook.html
@@ -1,12 +1,112 @@
-FACEBOOK.html
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/CSS/Style.css">
 </head>
+
 <body>
-    
+    <!-- DIV. da la clase y DIV.(Nombre) crea la etiqueta con alt se sube o se baja shif +alt con la fecha se duplica -->
+
+
+    <div class="main-box">
+
+        <div class="">
+
+            <div class="bg box-one">
+
+                <img class="Logo" src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg" alt="">
+                <h2 class="Texto">Facebook te ayuda a comunicarte y compartir con las personas que forman parte de tu
+                    vida.</h2>
+
+            </div>
+
+            <div class="bg box-tow">
+
+                <form action="">
+                    <div>
+                        <input class="Correo" type="text" placeholder="Correo electrónico o número">
+                    </div>
+                    <div>
+                        <input type="text" placeholder="Contraseña">
+                    </div>
+
+                    <button>Iniciar sesion</button>
+
+                    </form>
+                    <div>
+                    <a href=>¿Olvidaste tu contraseña?</a>
+                    </div>
+                    <div>
+                    <a href=>Crear cuenta nueva</a>
+                    <div>
+                        <a href=>Crea una página</a> para una celebridad, una marca o un negocio
+                    </div>
+
+
+                </div>
+            </div>
+
+        </div>
+
+
+        
+        <ul>
+            <li>Español</li>
+            <div>
+                <li><a href=>English (US)</a></li>
+                <li><a href=>Français (France)</a></li>
+                <li><a href=>Português (Brasil)</a></li>
+                <li><a href=>Italiano</a></li>
+                <li><a href=>Deutsch</a></li>
+                <li><a href=>العربية</a></li>
+                <li><a href=>中文(简体)</a></li>
+                <li><a href=>日本語</a></li>
+                <li><a href=></a></li>
+            </div>
+        </ul>
+        <ul>
+            <li><a href=>Registrarte</a></li>
+            <li><a href=>Iniciar sesión</a></li>
+            <li><a href=>Messenger</a></li>
+            <li><a href=>Facebook Lite</a></li>
+            <li><a href=>Video</a></li>
+            <li><a href=>Meta Pay</a></li>
+            <li><a href=>Tienda de Meta</a></li>
+            <li><a href=>Meta Quest</a></li>
+            <li><a href=>Ray-Ban Meta</a></li>
+            <li><a href=>Meta AI</a></li>
+            <li><a href=>Instagram</a></li>
+            <li><a href=>Threads</a></li>
+            <li><a href=>Centro de información de votación</a></li>
+            <li><a href=>Política de privacidad</a></li>
+            <li><a href=>Centro de privacidad</a></li>
+            <li><a href=>Información</a></li>
+            <li><a href=>Crear anuncio</a></li>
+            <li><a href=>Crear página</a></li>
+            <li><a href=>Desarrolladores</a></li>
+            <li><a href=>Empleo</a></li>
+            <li><a href=>Cookies</a></li>
+            <li><a href=>Opciones de anuncios</a></li>
+            <li><a href=>Condiciones</a></li>
+            <li><a href=>Ayuda</a></li>
+            <li><a href=>Importación de contactos y no usuarios</a></li>
+            <li><a href=>Configuración</a></li>
+            <li><a href=>Registro de actividad</a></li>
+            <p> Meta © 2025</p>
+
+        </ul>
+
+        <div>
+
+        </div>
+
+
+
+
 </body>
+
 </html>
