Creacion de facebook

--- a/HTML/Facebook.html
+++ b/HTML/Facebook.html
@@ -14,7 +14,7 @@
 
     <div class="main-box">
 
-        <div class="">
+        <div class="principal">
 
             <div class="bg box-one">
 
@@ -23,37 +23,41 @@
                     vida.</h2>
 
             </div>
+            <div class="principal2">
+                <div class="bg box-tow">
 
-            <div class="bg box-tow">
+                    <form action="">
+                        <div>
+                            <input class="Correo" type="text" placeholder="Correo electrónico o número de teléfono">
+                        </div>
+                        <div>
+                            <input class="clave" type="password" placeholder="Contraseña">
+                        </div>
 
-                <form action="">
-                    <div>
-                        <input class="Correo" type="text" placeholder="Correo electrónico o número">
-                    </div>
-                    <div>
-                        <input type="text" placeholder="Contraseña">
-                    </div>
-
-                    <button>Iniciar sesion</button>
+                        <button class="Boton"> Iniciar sesión</button>
 
                     </form>
                     <div>
-                    <a href=>¿Olvidaste tu contraseña?</a>
+                        <a class="Link" href=>¿Olvidaste tu contraseña?</a>
                     </div>
+                    <div class="Linea"> </div>
                     <div>
-                    <a href=>Crear cuenta nueva</a>
-                    <div>
-                        <a href=>Crea una página</a> para una celebridad, una marca o un negocio
-                    </div>
+                        <button class="Boton2"> Crear cuenta nueva</button>
 
+                    </div>
+                    <div class="bg box-thre">
+                        <div class="x">
+                            <a class="Textof" href=>Crea una página</a> para una celebridad, una marca o un negocio
+                        </div>
+                        
+                    </div>
 
                 </div>
             </div>
-
         </div>
 
 
-        
+
         <ul>
             <li>Español</li>
             <div>
@@ -100,9 +104,9 @@
 
         </ul>
 
-        <div>
 
-        </div>
+
+    </div>
 
 
 
