--- a/HTML/Facebook.html
+++ b/HTML/Facebook.html
@@ -49,68 +49,60 @@
                         <div class="x">
                             <a class="Textof" href=>Crea una página</a> para una celebridad, una marca o un negocio
                         </div>
-                        
-                    </div>
 
+                    </div>
                 </div>
             </div>
         </div>
 
-
-
-        <ul>
-            <li>Español</li>
+        <div class="footer">
+            <div class="z">
+            <li><a class="x" href="">English (US)</a></li>
+            <li><a class="x" href="">Français (France)</a></li>
+            <li><a class="x" href="">Português (Brasil)</a></li>
+            <li><a class="x" href="">Italiano</a></li>
+            <li><a class="x" href="">Deutsch</a></li>
+            <li><a class="x" href="">العربية</a></li>
+            <li><a class="x" href="">中文(简体)</a></li>
+            <li><a class="x" href="">日本語</a></li>
+            <li><a class="x" href=""></a></li>
+        </div>
+        <div class="Linea2"> </div>
+        <div class="cajafina2">
+            <li><a class="x" href="">Registrarte</a></li>
+            <li><a class="x" href="">Iniciar sesión</a></li>
+            <li><a class="x" href="">Messenger</a></li>
+            <li><a class="x" href="">Facebook Lite</a></li>
+            <li><a class="x" href="">Video</a></li>
+            <li><a class="x" href="">Meta Pay</a></li>
+            <li><a class="x" href="">Tienda de Meta</a></li>
+            <li><a class="x" href="">Meta Quest</a></li>
+            <li><a class="x" href="">Ray-Ban Meta</a></li>
+            <li><a class="x" href="">Meta AI</a></li>
+            <li><a class="x" href="">Instagram</a></li>
+            <li><a class="x" href="">Threads</a></li>
+            <li><a class="x" href="">Centro de información de votación</a></li>
+            <li><a class="x" href="">Política de privacidad</a></li>
+            <li><a class="x" href="">Centro de privacidad</a></li>
+            <li><a class="x" href="">Información</a></li>
+            <li><a class="x" href="">Crear anuncio</a></li>
+            <li><a class="x" href="">Crear página</a></li>
+            <li><a class="x" href="">Desarrolladores</a></li>
+            <li><a class="x" href="">Empleo</a></li>
+            <li><a class="x" href="">Cookies</a></li>
+            <li><a class="x" href="">Opciones de anuncios</a></li>
+            <li><a class="x" href="">Condiciones</a></li>
+            <li><a class="x" href="">Ayuda</a></li>
+            <li>
+                <a class="x" href="">Importación de contactos y no usuarios</a>
+            </li>
+            <li><a class="x" href="">Configuración</a></li>
+            <li><a class="x" href="">Registro de actividad</a></li>
             <div>
-                <li><a href=>English (US)</a></li>
-                <li><a href=>Français (France)</a></li>
-                <li><a href=>Português (Brasil)</a></li>
-                <li><a href=>Italiano</a></li>
-                <li><a href=>Deutsch</a></li>
-                <li><a href=>العربية</a></li>
-                <li><a href=>中文(简体)</a></li>
-                <li><a href=>日本語</a></li>
-                <li><a href=></a></li>
+                <p class="letraf">Meta © 2025</p>
             </div>
-        </ul>
-        <ul>
-            <li><a href=>Registrarte</a></li>
-            <li><a href=>Iniciar sesión</a></li>
-            <li><a href=>Messenger</a></li>
-            <li><a href=>Facebook Lite</a></li>
-            <li><a href=>Video</a></li>
-            <li><a href=>Meta Pay</a></li>
-            <li><a href=>Tienda de Meta</a></li>
-            <li><a href=>Meta Quest</a></li>
-            <li><a href=>Ray-Ban Meta</a></li>
-            <li><a href=>Meta AI</a></li>
-            <li><a href=>Instagram</a></li>
-            <li><a href=>Threads</a></li>
-            <li><a href=>Centro de información de votación</a></li>
-            <li><a href=>Política de privacidad</a></li>
-            <li><a href=>Centro de privacidad</a></li>
-            <li><a href=>Información</a></li>
-            <li><a href=>Crear anuncio</a></li>
-            <li><a href=>Crear página</a></li>
-            <li><a href=>Desarrolladores</a></li>
-            <li><a href=>Empleo</a></li>
-            <li><a href=>Cookies</a></li>
-            <li><a href=>Opciones de anuncios</a></li>
-            <li><a href=>Condiciones</a></li>
-            <li><a href=>Ayuda</a></li>
-            <li><a href=>Importación de contactos y no usuarios</a></li>
-            <li><a href=>Configuración</a></li>
-            <li><a href=>Registro de actividad</a></li>
-            <p> Meta © 2025</p>
-
-        </ul>
-
-
-
+        </div>
     </div>
-
-
-
-
 </body>
 
 </html>
